--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ chrono = {version = "0.4.38", features = ["serde"]}
 itertools = "0.13.0"
 serde = { version = "1.0.209", features = ["derive",] }
 serde_json = "1.0.127"
+strum = "0.26.3"
+strum_macros = "0.26.4"
