--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 chrono = {version = "0.4.38", features = ["serde"]}
 itertools = "0.13.0"
+psutil = "3.3.0"
+rayon = "1.10.0"
 serde = { version = "1.0.209", features = ["derive",] }
 serde_json = "1.0.127"
 strum = "0.26.3"
