--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-burn = { version = "0.14.0", features = ["burn-train", "train", "wgpu"] }
+burn = { version = "0.14.0", features = ["train", "wgpu", ] }
 chrono = {version = "0.4.38", features = ["serde"]}
 itertools = "0.13.0"
 psutil = "3.3.0"
