--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,10 @@ serde_json = "1.0.127"
 strum = "0.26.3"
 strum_macros = "0.26.4"
 log = "0.4.22"
-gtk = { package = "gtk4", version = "*" }
 plotters-cairo = "0.7.0"
+eframe = "0.29.1"
+egui = "0.29.1"
+egui_plot = "0.29.0"
 
 
 
